--- a/Makefile.in
+++ b/Makefile.in
@@ -594,6 +594,15 @@ valgrind: library $(TESTS:%=%_VALGRIND_RUN)
 endif
 
 ################################################################################
+# coverage
+################################################################################
+
+coverage:
+	mkdir build/coverage
+	lcov --capture --exclude "*test/t-*.c" --exclude "/usr/*" --directory build --output-file build/coverage/coverage.info
+	genhtml build/coverage/coverage.info --output-directory build/coverage
+
+################################################################################
 # clean
 ################################################################################
 
