--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,14 @@
+#
+# Copyright (C) 2023 Isuru Fernando
+#
+# This file is part of FLINT.
+#
+# FLINT is free software: you can redistribute it and/or modify it under
+# the terms of the GNU Lesser General Public License (LGPL) as published
+# by the Free Software Foundation; either version 2.1 of the License, or
+# (at your option) any later version.  See <http://www.gnu.org/licenses/>.
+#
+
 cmake_minimum_required(VERSION 3.10)
 
 include(CheckIPOSupported)
