--- a/Makefile.in
+++ b/Makefile.in
@@ -205,7 +205,7 @@ endif
 SINGLE_HEADERS :=                                                           \
         flint.h         longlong.h      exception.h    gmpcompat.h          \
         hashmap.h       profiler.h      templates.h    flint-config.h       \
-        fft_tuning.h    fmpz-conversions.h                                  \
+        fft_tuning.h                                                        \
                                                                             \
         mpoly_types.h                                                       \
         fmpz_types.h                    fmpq_types.h                        \
